# aou-http

./: Cargo.toml  README.md  extend.d.ts  extend.js  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml
.docker/: alpine.Dockerfile  debian.Dockerfile
.github/workflows/: CI.yml
__test__/: index.mjs  index.spec.mjs  worker.mjs
fixtures/: hello_world.txt
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: package.json
npm/npm/darwin-arm64/: package.json
npm/npm/darwin-x64/: package.json
npm/npm/freebsd-x64/: README.md
npm/npm/linux-x64-gnu/: package.json
npm/npm/linux-x64-musl/: README.md
npm/win32-x64-msvc/: README.md  package.json
src/: constants.rs  error.rs  lib.rs  main.rs  methods.rs  native.rs  request.rs  response.rs  route.rs  server.rs
src/request/: handle.rs  head.rs  headers.rs  method.rs  mod.rs  options.rs  parser.rs  request.rs  token.rs
src/request/head/: error.rs  mod.rs
src/request/parser/: mod.rs  parser.rs  result.rs  state.rs  status.rs
src/utils/: mod.rs  test.rs
tests/: buffers.rs  e2e.rs  request_parser.rs  socket_streaming.rs
