[package]
name = "aou"
main = "/src/main.rs"
edition = "2021"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.82"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = [
    "napi4",
    "tokio_rt",
    "serde-json",
] }
napi-derive = "2.12.2"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = { version = "1.0.116" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
tokio = { version = "1.37.0", features = [
    "net",
    "macros",
    "rt-multi-thread",
    "sync",
    "io-util",
    "time",
] }
# tokio-uring = { version = "0.4.0" }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
