[package]
name = "aou_rs"
edition = "2021"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

# [[bin]]
# name = "native"
# path = "src/native.rs"

[dependencies]
anyhow = "1.0.82"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = [
    "napi4",
    "tokio_rt",
    "serde-json",
] }
napi-derive = "2.12.2"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = { version = "1.0.116" }

tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


tokio = { version = "1.37.0", features = [
    "net",
    "macros",
    "rt-multi-thread",
    "sync",
    "io-util",
    "time",
] }
bytes = "1.6.0"
matchit = "0.8.4"
# tokio-uring = { version = "0.4.0" }

[build-dependencies]
napi-build = "2.0.1"

[dev-dependencies]
tokio = { version = "1.37.0", features = ['full', 'test-util'] }

[profile.release]
lto = true
strip = "symbols"
